# columbo

./: AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: checks.yml
crates/columbo/: Cargo.toml
crates/columbo/examples/axum-example/: main.rs
crates/columbo/src/: cancel_on_drop.rs  columbo.js  format.rs  html.rs  html_stream.rs  lib.rs  markup_stream.rs  resp_adapter.rs  run_suspended.rs
crates/columbo/src/tests/: cancellation.rs  edge_cases.rs  maud_integration.rs  mod.rs  panic_handling.rs  placeholders.rs  string_based.rs
crates/columbo/tests/: integration.rs
