[package]
name = "columbo"
version = "0.1.0"

edition = "2024"

[dependencies]
bytes = "1.11.1"
futures = "0.3"
maud = "0.27"
tokio = { version = "1", features = [ "rt", "sync", "macros" ] }
tokio-stream = "0.1"
tokio-util = "0.7.18"
tracing = "0.1"

[dev-dependencies]
axum = { version = "0.8", features = [ "macros" ] }
nanorand = "0.8"
scraper = "0.22"
tokio = { version = "1", features = [ "full" ] }
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
