[package]
name = "columbo"
version = "0.1.0"

edition = "2024"

[features]
default = [ "maud" ]
maud = [ "dep:maud" ]

[dependencies]
bytes = "1.11.1"
futures = "0.3"
maud = { version = "0.27", optional = true }
tokio = { version = "1", features = [ "rt", "sync", "macros" ] }
tokio-stream = "0.1"
tokio-util = "0.7.18"
tracing = "0.1"

[dev-dependencies]
axum = { version = "0.8", features = [ "macros" ] }
maud = "0.27"
nanorand = "0.8"
scraper = "0.22"
tokio = { version = "1", features = [ "full" ] }
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

[[example]]
name = "axum-example"
path = "examples/axum-example/main.rs"
required-features = [ "maud" ]
