[package]
name = "columbo"
version = "0.1.1"

edition = "2024"

description = "Async SSR streaming suspense — render placeholders, stream HTML replacements as futures resolve."
license = "MIT OR Apache-2.0"
repository = "https://github.com/johnbchron/columbo"

[features]
axum = [ "dep:axum-core" ]
default = [ "axum", "maud" ]
maud = [ "dep:maud" ]

[dependencies]
axum-core = { version = "0.5", optional = true }
bytes = "1.11.1"
futures = "0.3"
maud = { version = "0.27", optional = true }
tokio = { version = "1", features = [ "rt", "sync", "macros" ] }
tokio-stream = "0.1"
tokio-util = "0.7.18"
tracing = "0.1"

[dev-dependencies]
axum = { version = "0.8", features = [ "macros" ] }
maud = "0.27"
nanorand = "0.8"
scraper = "0.22"
tokio = { version = "1", features = [ "full" ] }
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

[[example]]
name = "axum-example"
path = "examples/axum-example/main.rs"
required-features = [ "maud" ]
